--- a/index.html
+++ b/index.html
@@ -1,15 +1,126 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content = "IE-edge">
-    <meta name = "viewport" content = "width = device-width, initial scale = 1.0"
-    <title>ABOUT ME</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pranav V Penmatcha's Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f4f4f4;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        h3 {
+            color: #555;
+            margin-top: 0;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .section p, .section ul {
+            margin: 5px 0;
+        }
+        .contact a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+        .contact a:hover {
+            text-decoration: underline;
+        }
+        .posts li {
+            background-color: #fff;
+            margin: 5px 0;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+    </style>
 </head>
 <body>
-    <div class = "container">
-        <h1>Welcome to my Personal Website</h1>
-        <h2>Check out my acheivements</h2>
+    <h1>PRANAV V PENMATCHA</h1>
+    <p>5132 West Trotter Trail | (623) 850-8488 | <a href="mailto:pvp6360@nyu.edu">pvp6360@nyu.edu</a></p>
+
+    <div class="section">
+        <h2>PROFILE</h2>
+        <p>A motivated and goal-driven sophomore with real-world experience in hardware engineering and projects, with a strong interest in embedded systems and system integration. I possess strong communication skills and an industrious work ethic. I am proficient in AutoCAD, REVIT, and Excel.</p>
+    </div>
+
+    <div class="section">
+        <h2>EDUCATION</h2>
+        <p><strong>New York University | Tandon School of Engineering, New York, NY</strong><br>B.S. in Electrical and Computer Engineering | Aug 2023 – May 2027</p>
+        <p><strong>BASIS Peoria High School, Phoenix, AZ</strong><br>High School Diploma | Sep 2019 – Jun 2023<br>- ACT: 35/36, AP Scholar with Distinction</p>
+    </div>
+
+    <div class="section">
+        <h2>PROFESSIONAL EXPERIENCE</h2>
+        <p><strong>Wireless Energy Transfer for EV Charging (WTEEC) | August 2024 – Present</strong></p>
+        <ul>
+            <li>Created a project to revolutionize EV charging, applied to the NYU Prototyping fund.</li>
+            <li>Developed a website: <a href="https://wteec.github.io/WTEEC-Project/" target="_blank">https://wteec.github.io/WTEEC-Project/</a></li>
+            <li>Gained a deep understanding of inductive charging, radio charging, and active shielding.</li>
+        </ul>
+        <p><strong>GaAs Dollar Cell Project, Head Researcher for MEIC Clean Room, Tempe, AZ | August 2022 – May 2023</strong></p>
+        <ul>
+            <li>Led a 4-person team to develop a solar cell model to increase efficiency in a clean room lab.</li>
+            <li>Published a peer-reviewed paper on GaAs in Silicon (May 2022).</li>
+            <li>Honors: Best Student Presenter at APS 4CS Fall Meeting, Speaker at MRS Spring Meeting, APS Member, MRS Member.</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>LEADERSHIP & EXTRACURRICULAR ACTIVITIES</h2>
+        <p><strong>VIP NYU Tandon MotorSports, Electrical & Manufacturing Subteam | Sept 2023 - Present</strong></p>
+        <ul>
+            <li>Selected into NYU Tandon’s most competitive engineering club.</li>
+            <li>Became proficient with Xilinx Vivado for FPGA power management system.</li>
+            <li>Worked on a brake system project using CAD, MATLAB, SolidWorks, and Fusion 360.</li>
+        </ul>
+        <p><strong>VIP NYU Concrete Canoe, Construction Team | Jan 2024 – Present</strong></p>
+        <ul>
+            <li>Contributed to a team that won the New York divisional ASCE Concrete Canoe Competition.</li>
+            <li>Designed an electric box (in AutoCAD) to transport the boat.</li>
+            <li>Trained students in DMM, oscilloscope, waveform generator, and OCPD usage.</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>ACADEMICS</h2>
+        <ul>
+            <li><strong>NYU General Engineering Teaching Assistant | Aug 2024 – Present</strong></li>
+            <li><strong>NYU Expository Writing Program, Writing Partner | Aug 2024 – Present</strong></li>
+            <li><strong>NYU Financial Forecasting Club, Vice President | Jan 2024 – Present</strong><br>- Helped grow club from 4 to 50+ members.<br>- Secured industry sponsorships and expert speakers for events.</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>VOLUNTEERING</h2>
+        <p><strong>UNICEF, Outreach Strategist & Leader, Peoria, AZ</strong></p>
+        <ul>
+            <li>Developed donor attraction strategies for fundraisers aiding marginalized communities.</li>
+            <li>Organized meetings with legislators (Tony Rivero, Debbie Lesko) to discuss policy advocacy.</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>CERTIFICATIONS</h2>
+        <ul>
+            <li>Python Certification, Apple MacBook, iPad, iPhone Mechanic Certification | June 2024</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>RELEVANT COURSEWORK</h2>
+        <ul>
+            <li>Fundamentals of Electric Circuits, Digital Logic, Communication Theory</li>
+            <li>Object-Oriented Programming, Data Structures and Algorithms</li>
+            <li>Linear Algebra & Differential Equations, Physics (Electricity & Magnetism), Financial Accounting</li>
+        </ul>
     </div>
 </body>
 </html>
