--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
 </head>
 <body>
     <h1>Pranav Penmatcha</h1>
-    <p><a href="mailto:pvp6360@nyu.edu">contact@octavian.work</a><br></p>
+    <p><a href="mailto:pvp6360@nyu.edu">pvp6360@nyu.edu</a><br></p>
     
-    <p>cofounder @ WTEEC
-        Electrical and Computer Engineering Student at NYU.</p>
+    <p>cofounder @ WTEEC, Electrical and Computer Engineering Student at NYU.</p>
     
     <p><strong>currently</strong></p>
     <ul>
