--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
     <hr>
     
     <p><strong>posts</strong></p>
-    <p>07.2024 . <a href="#">parallelization and cache handling in 2D convolutions</a> [new]</p>
-    <p>02.2024 . <a href="#">vectorizing a gotoBLAS/BLIS 8x8 sgemm kernel</a></p>
-    <p>04.2021 . <a href="#">using ANNs to decode retinal ganglion cell encoding</a></p>
+    <p>11.2024 . <a href="sonic.html">sonic infinite runner breakdown</a> </p>
 </body>
 </html>
