--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Octavian Rusu</title>
+    <title>Pranav Penmatcha</title>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: monospace;
+            font-family: 'IBM Plex Mono', monospace;
             background-color: #fff;
             color: #000;
             margin: 40px;
