--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'IBM Plex Mono', monospace;
+            font-family: 'Source Code Pro', monospace;
             background-color: #fff;
             color: #000;
             margin: 40px;
