--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     
     <p><strong>currently</strong></p>
     <ul>
-        <li>optimizing convolutions in asm for x86-64 and <a href="#">documenting it</a></li>
-        <li>afterwards might try on an arm64 <a href="#">exynos 7420</a> and nvidia <a href="#">3060ti</a></li>
-        <li>studying an <a href="#">MNIST convnet</a> as smooth manifold</li>
+        <li>Developing RF-based wireless charging systems by researching and optimizing radio frequency energy transfer for efficient EV charging.</li>
+        <li>Designing and testing active shielding techniques to mitigate electromagnetic interference and improve power transmission efficiency.</li>
+        <li>Prototyping an RF energy harvesting circuit to explore long-range wireless power delivery for next-generation EV infrastructure.</li>
     </ul>
     
     <hr>
