--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
             font-family: 'Source Code Pro', monospace;
             background-color: #fff;
             color: #000;
+            margin: 40px;
+            /*
             margin: 0;
             height: 100vh;
             display: flex;
             flex-direction: column;
-            justify-content: center; /* Centers content vertically */
-            align-items: center; /* Centers content horizontally */
-            text-align: center; /* Ensures inline text is centered */
+            justify-content: center; 
+            align-items: center; 
+            text-align: center; 
+            */
         }
         a {
             color: blue;
