--- a/LivestockRF.html
+++ b/LivestockRF.html
@@ -3,22 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RF Based Livestock Counting</title>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <title>RF-Based Livestock Counting System</title>
     <style>
         body {
-            font-family: monospace;
-            background-color: #f8f8f8;
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            background: white;
             padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h1, h2 {
             color: #333;
         }
-        code {
-            background-color: #eee;
-            padding: 2px 5px;
+        img {
+            max-width: 60%; /* Adjust the image size */
+            height: auto;
             border-radius: 5px;
+        }
+        code {
+            background: #eee;
+            padding: 5px;
+            border-radius: 5px;
+            font-family: "Courier New", monospace;
         }
         pre {
             background: #eee;
