--- a/LivestockRF.html
+++ b/LivestockRF.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RF-Based Livestock Counting System</title>
     <style>
+        
         body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f4f4f4;
+            font-family: monospace;
+            background-color: #f8f8f8;
+            padding: 20px;
         }
         .container {
             max-width: 800px;
