--- a/LivestockRF.html
+++ b/LivestockRF.html
@@ -11,13 +11,13 @@
             background-color: #f8f8f8;
             padding: 20px;
         }
-        .container {
+/*         .container {
             max-width: 800px;
             background: white;
             padding: 20px;
             border-radius: 10px;
             /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
-        }
+        } */
         h1, h2 {
             color: #333;
         }
