--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <hr>
     
     <p><strong>posts</strong></p>
-    <p>11.2024 . <a href="sonic.html">sonic infinite runner breakdown</a> </p>
+    <p>11.2024 . <a href="sonic.html">sonic infinite runner breakdown</a> [new]</p>
     <p>05.2024 . <a href="LivestockRF.html">RFID livestock tracking</a> </p>
+    <p>03.2024 . <a href="#">Smart Financial Forecasting Dashboard</a> </p>
 </body>
 </html>
