--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
     <p><strong>posts</strong></p>
     <p>11.2024 . <a href="sonic.html">sonic infinite runner breakdown</a> [new]</p>
     <p>05.2024 . <a href="LivestockRF.html">RFID livestock tracking</a> </p>
-    <p>03.2024 . <a href="#">Smart Financial Forecasting Dashboard</a> </p>
+    <p>03.2024 . <a href="financial.html">Smart Financial Forecasting Dashboard</a> </p>
 </body>
 </html>
